[tool.poetry]
name = "streamlitdemo"
version = "0.1.0"
description = ""
authors = ["Volodymyr Vitvitskyi <contact.volodymyr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "1.3.1"
sumy = "0.9.0"
numpy = "1.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
